examples/type_system/failing/181_effect_missing_colon.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

effect Console { print String -> None }
let after = 1
